flask-nowstragram-web/flask-nowstragram-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flask-nowstragram-web
spec:
  replicas: 1
  selector:
    matchLabels:
      app: flask-nowstragram-web
  template:
    metadata:
      labels:
        app: flask-nowstragram-web
    spec:
      containers:
      - name: flask-nowstragram-web
        image: wolihi/flask-nowstragram-web:v1.0
        imagePullPolicy: Always
        ports:
        - containerPort: 7781
