flask-nowstragram-web/flask-bigdata-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-flask-nowstragram-web
  namespace: default
  annotations:
    #kubernetes.io/ingress.class: "nginx"
    wginx.ingress.kubernetes.io/configuration-snippet: |
      proxy_set_header X-Real-IP $http_x_forwarded_for;
spec:
  rules:
  - host: www.saraluce.com
    http:
      paths:
      - backend:
          serviceName: flask-nowstragram-web-svc
          servicePort: 7781
        path: /
  - host: saraluce.com
    http:
      paths:
      - backend:
          serviceName: flask-nowstragram-web-svc
          servicePort: 7781
        path: /
